Translate the "plays" collection
There are 3 main things I did here:

1. Added a _data/translations.yml file

For on-page text, link text, alt text, the site name, etc, it seems
like the convention is to create a yml file with "en" and "fr" keys
and swap between them based on the current language.

Gets pretty verbose in the template but it's simple and easy.

2. Added translations for the plays files

It's a bit weird what we're doing with collections here, it seems
like most of the time, collections are intended to be their own pages.

Whatever, added an extra directory and then an "if" check to all of our
loops — not beautiful but it appears to be working.

Ran all of the "play" titles through DeepL, so they're mostly
for demonstration.

3. Added langauge switching links

Super basic but they work okay.

--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -4,6 +4,7 @@ en:
   intro_plays_button: "See the plays"
   intro_github_button: "Help improve this content"
   index_heading: "Digital Service Plays"
+  index_button: "In detail"
   cds-snc: "Canadian Digital Service"
 fr:
   site_name: "SNC Playbook"
@@ -11,4 +12,5 @@ fr:
   intro_plays_button: "Voir les plays"
   intro_github_button: "Aidez à améliorer ce contenu"
   index_heading: "Plays numeriques"
+  index_button: "En détail"
   cds-snc: "Service numérique canadien"
