--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -3,7 +3,7 @@ en:
   menu_alt_text: "Back to top"
   intro_plays_button: "See the plays"
   intro_github_button: "Help improve this content"
-  index_heading: "Digital Service Plays"
+  index_heading: "Technical Plays"
   index_button: "In detail"
   cds-snc: "Canadian Digital Service"
 fr:
@@ -11,6 +11,6 @@ fr:
   menu_alt_text: "Retour au début"
   intro_plays_button: "Voir les plays"
   intro_github_button: "Aidez à améliorer ce contenu"
-  index_heading: "Plays numeriques"
+  index_heading: "Plans techniques"
   index_button: "En détail"
   cds-snc: "Service numérique canadien"
